2007-04-11 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am: Fixed a few things that broke distcheck.
	* accerciser.schemas.in: Added, o allow translation.
	* accerciser.schemas: Removed.
	* help/C/accerciser.xml: Fixed some errors.
	* po/POTFILES.in: Added schema file for translation.
	
2007-04-10 Eitan Isaacson  <eitan@ascender.com>

	* Makefile.am:
	* configure.in:
	* icons/Makefile.am:
	* icons/custom.png:
	* pixmaps:
	* pixmaps/Makefile.am:
	* pixmaps/acceleratorlabel.png:
	* pixmaps/alert.png:
	* pixmaps/animation.png:
	* pixmaps/calendar.png:
	* pixmaps/canvas.png:
	* pixmaps/care.png:
	* pixmaps/character.png:
	* pixmaps/chart.png:
	* pixmaps/checkbox.png:
	* pixmaps/clock.png:
	* pixmaps/colorchooser.png:
	* pixmaps/column.png:
	* pixmaps/combobox.png:
	* pixmaps/cursor.png:
	* pixmaps/desktopframe.png:
	* pixmaps/desktopicon.png:
	* pixmaps/dial.png:
	* pixmaps/directorypane.png:
	* pixmaps/drawingarea.png:
	* pixmaps/embedded.png:
	* pixmaps/endnote.png:
	* pixmaps/entry.png:
	* pixmaps/filechooser.png:
	* pixmaps/filler.png:
	* pixmaps/fontchooser.png:
	* pixmaps/form.png:
	* pixmaps/grip.png:
	* pixmaps/heading.png:
	* pixmaps/helpballoon.png:
	* pixmaps/image.png:
	* pixmaps/imagemap.png:
	* pixmaps/inputmethodwindow.png:
	* pixmaps/invalid.png:
	* pixmaps/label.png:
	* pixmaps/link.png:
	* pixmaps/list.png:
	* pixmaps/listitem.png:
	* pixmaps/menuitem.png:
	* pixmaps/outlineitem.png:
	* pixmaps/passwordtext.png:
	* pixmaps/progressbar.png:
	* pixmaps/pushbutton.png:
	* pixmaps/row.png:
	* pixmaps/ruler.png:
	* pixmaps/scrollbar.png:
	* pixmaps/scrollpane.png:
	* pixmaps/seperator.png:
	* pixmaps/shape.png:
	* pixmaps/slider.png:
	* pixmaps/sound.png:
	* pixmaps/spinbutton.png:
	* pixmaps/splitpane.png:
	* pixmaps/statusbar.png:
	* pixmaps/table.png:
	* pixmaps/tablecell.png:
	* pixmaps/toolbar.png:
	* pixmaps/tooltip.png:
	* pixmaps/tree.png:
	* pixmaps/treetable.png:
	* src/lib/accerciser/icons.py: Added custom icons (thanks to James
	Stipp).
	