@@ -1,3 +1,7 @@
+2007-04-12 Peter Parente  <parente@cs.unc.edu>
+
+	* accerciser.spec.in: Added gconf schema install, uninstall, and files
+
 2007-04-11 Eitan Isaacson  <eitan@ascender.com>
 
 	* Makefile.am: Fixed a few things that broke distcheck.
